--- a/index.html
+++ b/index.html
@@ -51,12 +51,8 @@
                       <table class="row">
                         <tr>
                           <td class="small-12 last columns">
-                            <p style="font-size:21px;color:white;font-weight:700;text-align:center;">BE ONE OF LAMUDI’S BROKER AMBASSADORS!</p>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="small-12 last columns">
-                            <p style="color:white;text-align:center;">laboris nisi ut aliquip ex ea commodo consequat.labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut </p>
+                            <p style="font-size:36px;color:white;font-weight:700;text-align:center;">BE ONE OF LAMUDI’S BROKER AMBASSADORS!</p>
+                            <p style="text-align:center;padding-top:20px;"><a href="https://docs.google.com/a/lamudi.com.ph/forms/d/e/1FAIpQLSeJjfLuHQ7M9uX6g1t_g8JqQCW4MOfcXwDCJG3WnxQtgZ65aw/viewform" target="_blank"><img style="margin:0 auto;" src="images/btn-03.jpg" alt="REFER BROKERS/AGENTS NOW"></a></p>
                           </td>
                         </tr>
                       </table>
@@ -75,7 +71,7 @@
                       <table class="row">
                         <tr>
                           <td class="small-12 last columns">
-                            <p style="font-size:21px;color:#3466B8;font-weight:700;text-align:center;">AMBASSADOR BENEFITS</p>
+                            <p style="font-size:28px;color:#3466B8;font-weight:700;text-align:center;">AMBASSADOR BENEFITS</p>
                           </td>
                         </tr>
                       </table>
@@ -89,8 +85,8 @@
                             <img src="images/benefits-01.jpg">
                           </td>
                           <td style="width:50%;" class="small-6 last columns">
-                            <h5 style="color:#444;margin-top:20px;margin-bottom:20px;">Win an award at the Lamudi Broker Awards Night</h2>
-                            <p><a href="#" style="font-weight:700;">READ MORE ABOUT THIS EVENT</a></p>
+                            <h5 style="color:#444;margin-top:20px;margin-bottom:20px;">Win an award at the Lamudi Broker Awards Night on March 30, 2017</h2>
+                            <p><a href="http://www.lamudi.com.ph/brokerawards/" target="_blank" style="font-weight:700;">READ MORE ABOUT THIS EVENT</a></p>
                           </td>
                         </tr>
                       </table>
@@ -119,7 +115,7 @@
                             <img src="images/benefits-03.jpg">
                           </td>
                           <td style="width:50%;" class="small-6 last columns">
-                            <h5 style="color:#444;margin-top:20px;margin-bottom:20px;">Be featured in our blog and social medias</h2>
+                            <h5 style="color:#444;margin-top:20px;margin-bottom:20px;">Be featured in our blog and social media accounts</h2>
                             <p><a href="http://www.lamudi.com.ph/journal/" target="_blank" style="font-weight:700;">LAMUDI JOURNAL</a></p>
                           </td>
                         </tr>
@@ -175,7 +171,7 @@
                         <tr>
                           <td class="small-12 last columns">
                             <p style="text-align:center;padding-bottom:10px;max-width:400px;margin:0 auto;">Refer at least 5 brokers or agents by clicking the button below.</p>
-                            <p style="text-align:center;padding-bottom:20px;"><a href="#"><img style="margin:0 auto;" src="images/btn-02.jpg" alt="SEND US A MESSAGE"></a></p>
+                            <p style="text-align:center;padding-bottom:20px;"><a href="https://docs.google.com/a/lamudi.com.ph/forms/d/e/1FAIpQLSeJjfLuHQ7M9uX6g1t_g8JqQCW4MOfcXwDCJG3WnxQtgZ65aw/viewform" target="_blank"><img style="margin:0 auto;" src="images/btn-02.jpg" alt="REFER BROKERS/AGENTS NOW"></a></p>
                           </td>
                         </tr>
                         <tr>
@@ -185,7 +181,7 @@
                         </tr>
                         <tr>
                           <td class="small-12 last columns">
-                            <p style="text-align:center;padding-bottom:20px;max-width:400px;margin:0 auto;">Enter your full name, names and contact details of the brokers or agents that you will refer.</p>
+                            <p style="text-align:center;padding-bottom:20px;max-width:400px;margin:0 auto;">Enter your full name, email address and contact details of the brokers or agents that you will refer</p>
                           </td>
                         </tr>
                         <tr>
