--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Title</title>
+  <title>Lamudi Referral Newsletter</title>
   <link rel="stylesheet" href="css/foundation-emails.css" />
 </head>
 
@@ -24,9 +24,9 @@
                           <td class="small-12 large-6 first columns"><img src="images/lamudi-logo-01.jpg"></td>
                           <td class="small-12 large-6 last columns">
                             <ul style="list-style:none;width:100%;text-align:right;padding:0;">
-                              <li style="display:inline-block;"><a style="color:white;padding:20px 10px;display:inline-block;" href="#">Home</a></li>
-                              <li style="display:inline-block;"><a style="color:white;padding:20px 10px;display:inline-block;" href="#">Events</a></li>
-                              <li style="display:inline-block;"><a style="color:white;padding:20px 0 20px 10px;display:inline-block;" href="#">Contact Us</a></li>
+                              <li style="display:inline-block;"><a style="color:white;padding:20px 10px;display:inline-block;" href="http://www.lamudi.com.ph/" target="_blank">Home</a></li>
+                              <li style="display:inline-block;"><a style="color:white;padding:20px 10px;display:inline-block;" href="http://www.lamudi.com.ph/events/" target="_blank">Events</a></li>
+                              <li style="display:inline-block;"><a style="color:white;padding:20px 0 20px 10px;display:inline-block;" href="http://www.lamudi.com.ph/contact/" target="_blank">Contact Us</a></li>
                             </ul>
                           </td> 
                         </tr>
