--- a/winner/index.html
+++ b/winner/index.html
@@ -37,8 +37,9 @@
               </td>
             </tr>
             <tr>
-              <td>
-                <img src="https://mypropertylamudi-test.github.io/referralnewsletter/images/banner-02.jpg">
+              <td height="440" style="background-color: #3466B8;background-image: url('https://mypropertylamudi-test.github.io/referralnewsletter/images/banner-03.jpg');background-repeat: no-repeat;background-position: bottom;">
+                <p style="font-size:21px;text-align:center;color:white;">CONGRATULATIONS TO OUR<p>
+                <p style="font-size:48px;text-align:center;color:white;">LAMUDI AMBASSADOR WINNERS!</p>
               </td>
             </tr>
           </table>
