--- a/winner/index.html
+++ b/winner/index.html
@@ -37,44 +37,49 @@
               </td>
             </tr>
             <tr>
-              <td height="440" style="background-color: #3466B8;background-image: url('https://mypropertylamudi-test.github.io/referralnewsletter/images/banner-03.jpg');background-repeat: no-repeat;background-position: bottom;">
-                <p style="font-size:21px;text-align:center;color:white;">CONGRATULATIONS TO OUR<p>
-                <p style="font-size:48px;text-align:center;color:white;">LAMUDI AMBASSADOR WINNERS!</p>
-              </td>
-            </tr>
-          </table>
-          <table style="background:#23548E;width:100%;max-width:800px;margin:0 auto;">
-            <tr>
-              <td style="padding-top:20px;padding-bottom:80px;">
-                <table style="background:#23548E;" class="container">
+              <td height="400" style="background-color: #3466B8;background-image: url('https://mypropertylamudi-test.github.io/referralnewsletter/images/banner-03.jpg');background-repeat: no-repeat;background-position: bottom;">
+                <table style="max-width: 560px;margin:0 auto;">
                   <tr>
-                    <td>
-                      <table class="row">
-                        <tr>
-                          <td class="small-12 last columns">
-                            <p style="font-size:36px;color:white;font-weight:700;text-align:center;">THE RACE TO LAMUDI’S BROKER AMBASSADOR IS ON!</p>
-                          </td>
-                        </tr>
-                      </table>
+                    <td style="padding-top:30px;">
+                      <p style="font-size:21px;font-weight:700;text-align:center;line-height:1.1;color:white;">CONGRATULATIONS TO OUR<p>
+                      <p style="font-size:48px;font-weight:700;text-align:center;line-height:1.1;color:white;">LAMUDI AMBASSADOR WINNERS!</p>
                     </td>
                   </tr>
                 </table>
               </td>
             </tr>
           </table>
-          <table style="background:#E5E5E5;width:100%;max-width:800px;margin:0 auto;">
+          <table style="background:#23548E;width:100%;max-width:800px;margin:0 auto;">
             <tr>
-              <td style="padding-top:50px;padding-bottom:50px;">
-                <table style="background:#E5E5E5;" class="container">
+              <td style="padding-bottom:50px;">
+                <table style="background:#23548E;width: 572px;margin:0 auto;" class="container">
                   <tr>
                     <td>
-                      <table class="row">
-                        <tr>
-                          <td class="small-12 last columns">
-                            <img style="margin:-120px auto 0 auto;" src="https://mypropertylamudi-test.github.io/referralnewsletter/images/leaderboard-01.png">
-                          </td>
-                        </tr>
-                      </table>
+                      <img src="https://mypropertylamudi-test.github.io/referralnewsletter/images/winner-01.png">
+                    </td>
+                  </tr>
+                  <tr>
+                    <td height="50" width="572px;"></td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <p style="font-size:21px;font-weight:700;text-align:center;color:white;">BROKER RUNNER UPS</p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td height="30" width="572px;"></td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <img src="https://mypropertylamudi-test.github.io/referralnewsletter/images/winner-02.png">
+                    </td>
+                  </tr>
+                  <tr>
+                    <td height="10" width="572px;"></td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <img src="https://mypropertylamudi-test.github.io/referralnewsletter/images/winner-03.png">
                     </td>
                   </tr>
                 </table>
@@ -83,64 +88,58 @@
           </table>
           <table style="background:white;width:100%;max-width:800px;margin:0 auto;">
             <tr>
-              <td style="padding-top:50px;padding-bottom:50px;">
-                <table class="container">
+              <td style="padding-top:50px;padding-bottom:30px;">
+                <table style="width:100%;max-width:592px;margin:0 auto;" class="container">
                   <tr>
                     <td>
                       <table class="row">
                         <tr>
-                          <td class="small-12 last columns">
-                            <p style="font-size:21px;color:#3466B8;font-weight:700;text-align:center;">IT'S NOT TOO LATE TO JOIN!</p>
+                          <td class="small-12">
+                            <p style="font-size:21px;color:#3466B8;font-weight:700;text-align:center;">ENJOY YOUR BENEFITS!</p>
                           </td>
                         </tr>
                       </table>
                     </td>
                   </tr>
                   <tr>
-                    <td style="padding-top:20px;padding-bottom:15px;">
-                      <table class="row">
+                    <td style="width:100%;height:40px;"></td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <table style="width:100%;max-width:592px;" class="row">
                         <tr>
+                          <td class="small-12 first columns">
+                            <img style="width:100%;" src="https://mypropertylamudi-test.github.io/referralnewsletter/images/benefits-01.jpg">
+                            <p style="font-size:18px;color:#444444;margin-top:10px;">Win an award at the Lamudi Broker Awards Night</p>
+                          </td>
                           <td class="small-12 last columns">
-                            <p style="text-align:center;text-transform:uppercase;font-weight:700;margin-top:20px;margin-bottom:20px;color:#aaa;">Note: You must have an active subscription with Lamudi.</p>
+                            <img style="width:100%;" src="https://mypropertylamudi-test.github.io/referralnewsletter/images/benefits-02.jpg">
+                            <p style="font-size:18px;color:#444444;margin-top:10px;">Win an award at the Lamudi Broker Awards Night</p>
                           </td>
                         </tr>
                         <tr>
-                          <td class="small-12 last columns">
-                            <img style="margin:0 auto;" src="https://mypropertylamudi-test.github.io/referralnewsletter/images/step-1.jpg">
+                          <td class="small-12 first columns">
+                            <img style="width:100%;" src="https://mypropertylamudi-test.github.io/referralnewsletter/images/benefits-03.jpg">
+                            <p style="font-size:18px;color:#444444;margin-top:10px;">Be featured in our blog and social medias</p>
                           </td>
-                        </tr>
-                        <tr>
                           <td class="small-12 last columns">
-                            <p style="text-align:center;padding-bottom:10px;max-width:400px;margin:0 auto;">Refer at least 5 brokers or agents by clicking the button below.</p>
-                            <p style="text-align:center;padding-bottom:20px;"><a href="https://docs.google.com/a/lamudi.com.ph/forms/d/e/1FAIpQLSeJjfLuHQ7M9uX6g1t_g8JqQCW4MOfcXwDCJG3WnxQtgZ65aw/viewform" target="_blank"><img style="margin:0 auto;" src="https://mypropertylamudi-test.github.io/referralnewsletter/images/btn-02.jpg" alt="REFER BROKERS/AGENTS NOW"></a></p>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="small-12 last columns">
-                            <img style="margin:0 auto;" src="https://mypropertylamudi-test.github.io/referralnewsletter/images/step-2.jpg">
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="small-12 last columns">
-                            <p style="text-align:center;padding-bottom:20px;max-width:400px;margin:0 auto;">Enter your full name, email address and contact details of the brokers or agents that you will refer</p>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="small-12 last columns">
-                            <img style="margin:0 auto;" src="https://mypropertylamudi-test.github.io/referralnewsletter/images/step-3.jpg">
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="small-12 last columns">
-                            <p style="text-align:center;padding-bottom:20px;max-width:400px;margin:0 auto;">One of your referred brokers / agents must get a subscription package with Lamudi. </p>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="small-12 last columns">
-                            <p style="text-align:center;text-transform:uppercase;font-weight:700;margin-top:20px;">Top 3 brokers who have the most number of referred clients by March 13 will be awarded as the Lamudi Ambassadors.</p>
+                            <img style="width:100%;" src="https://mypropertylamudi-test.github.io/referralnewsletter/images/benefits-04.jpg">
+                            <p style="font-size:18px;color:#444444;margin-top:10px;">Get a FREE Lamudi T-shirt</p>
                           </td>
                         </tr>
                       </table>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+            <tr>
+              <td style="padding-bottom:80px;">
+                <table style="background-color:#3466B8;width:100%;max-width:560px;margin:0 auto;text-align:center;" class="row">
+                  <tr>
+                    <td style="padding:20px;" class="small-12">
+                      <p style="font-size:21px;color:white;font-weight:700;text-align:center;margin-bottom:10px;">DO YOU WANT TO BE A LAMUDI BROKER AMBASSADOR TOO?</p>
+                      <p style="font-size:14px;color:white;text-align:center;">Watch out for the next announcement! For more information, please contact your preferred business development manager or account manager. </p>
                     </td>
                   </tr>
                 </table>
